--- a/index.qmd
+++ b/index.qmd
@@ -1,23 +1,32 @@
 ---
-title: "Klimaschutz am UKD -- Entwurf"
+title: "Klimaschutz an der Uniklinik: Jetzt handeln!"
 subtitle: "Die Uniklinik wird grün!"
 ---
 
 <div class="banner"></div>
 
+Der Klimawandel ist längst Realität –- und er erfordert entschlossenes Handeln. Als Mitarbeitende, Auszubildende und Studierende der Uniklinik ??? fordern wir ein klares Bekenntnis der Klinikleitung zu effektiven Klimaschutzmaßnahmen. Auch wenn unsere Schritte im globalen Kontext klein erscheinen mögen, könnte das Uniklinikum als Vorreiter im Klimaschutz ein starkes Signal setzen.
 
-Zum Jahresbeginn des Jahres 2025 wünschen wir uns:
+### Warum jetzt?
+Klimaschutz darf nicht länger warten. Maßnahmen sollten zeitnah und mit hoher Priorität geplant und umgesetzt werden. Dabei geht es nicht nur um ökologisch sinnvolle Veränderungen, sondern auch um ökonomische Nachhaltigkeit. Jede bauliche oder organisatorische Entscheidung muss den Klimaschutz als zentralen Aspekt berücksichtigen. Wir fordern zudem die Bereitstellung finanzieller Mittel, um auch solche Maßnahmen zu ermöglichen, die kurzfristig wirtschaftlich nicht profitabel erscheinen. Klimaschutz ist eine Investition in die Zukunft – und er hat seinen Preis. Fördermittel sollten konsequent eingeworben werden, wo immer es möglich ist.
 
-* Verankerung des Themas Nachhaltigkeit in den Unternehmenszielen
-* Prüfung der Möglichkeiten, den CO2-Abdruck des Uniklinikums möglichst schnell zu reduzieren -- mit dem Ziel eines Zero-Emission-Hospitals
-* Dabei sollten zeitnah und möglichst schnell geprüft werden:
-  * Energetische Gebäudesanierung
-  * Photovoltaik wo möglich
-  * Umstieg auf einen Ökostromanbieter
-  * und und und
-* Wirtschaftlich sinnvolle Maßnahmen sollten Vorrang haben, aber es muss auch Geld locker gemacht werden!
+### Unsere Ziele für 2025:
+Zum Jahresbeginn 2025 wünschen wir uns konkrete Schritte hin zu einer nachhaltigeren Klinik. Dazu zählen:
 
-Eine tolle Chance -- das Uniklinikum Dresden könnte Vorreiter werden im Bereich Klimaschutz! Das wäre toll!
+* Nachhaltigkeit als Unternehmensziel:
+  * Verankerung des Themas Klimaschutz und Nachhaltigkeit in den strategischen Zielen des Uniklinikums.
+* CO2-Reduktion mit klaren Zielen:
+* Eine systematische Prüfung aller Möglichkeiten, den CO2-Fußabdruck des Uniklinikums drastisch zu senken, mit dem langfristigen Ziel eines Zero-Emission-Hospitals.
+* Wir erwarten eine zeitnahe Prüfung und Umsetzung folgender Schritte:
+    * Energetische Gebäudesanierung
+    * Installation von Photovoltaikanlagen, wo immer möglich
+    * Umstellung auf einen Ökostromanbieter
+    * und weitere innovative Ansätze.
+
+Wirtschaftlich sinnvolle Maßnahmen sollten priorisiert werden. Gleichzeitig muss die Klinikleitung bereit sein, für den Klimaschutz auch in Bereiche zu investieren, die sich nicht unmittelbar monetär lohnen.
+
+### Eine große Chance für die Zukunft
+Das Uniklinikum ??? hat die Möglichkeit, ein Vorbild im Klimaschutz zu werden – für andere Kliniken, Institutionen und die gesamte Gesellschaft. Lassen Sie uns diese Chance ergreifen und gemeinsam handeln!
 
 
 <script>
