--- a/index.qmd
+++ b/index.qmd
@@ -10,7 +10,7 @@ Der Klimawandel ist längst Realität und erfordert *jetzt* entschlossenes Hande
 
 In den kommenden Monaten stehen große personelle Veränderungen an der Spitze der Uniklinik an -- das ist eine große Chance! Sicherlich werden viele wichtige Themen und begründete Anliegen an die neu zusammengesetzte Klinikleitung herangetragen. 
 
-Als Mitarbeitende, Auszubildende und Studierende der Uniklinik ??? ist uns das Thema Klimaschutz ein Herzensanliegen und wir fordern ein klares Bekenntnis der Klinikleitung zu effektiven Klimaschutzmaßnahmen. 
+Als Mitarbeitende, Auszubildende und Studierende der Uniklinik ??? ist uns das Thema **Klimaschutz** ein Herzensanliegen und wir fordern ein klares Bekenntnis der Klinikleitung zu effektiven Klimaschutzmaßnahmen. 
 
 Auch wenn unsere Schritte im globalen Kontext klein erscheinen mögen, könnte das Uniklinikum als Vorreiter im Klimaschutz ein starkes Signal setzen.
 
