--- a/index.qmd
+++ b/index.qmd
@@ -8,9 +8,11 @@ title: "Für Klimaschutz an der Uniklinik: Jetzt handeln!"
 
 Der Klimawandel ist längst Realität und erfordert *jetzt* entschlossenes Handeln. 
 
-In den kommenden Monaten stehen große personelle Veränderungen an der Spitze der Uniklinik an -- das ist eine große Chance! Sicherlich werden viele wichtige Themen und begründete Anliegen an die neu zusammengesetzte Klinikleitung herangetragen. 
+In den kommenden Monaten stehen große personelle Veränderungen an der Spitze der Uniklinik an -- das ist eine große Chance!
 
-Als Mitarbeitende, Auszubildende und Studierende der Uniklinik ??? ist uns das Thema **Klimaschutz** ein Herzensanliegen und wir fordern ein klares Bekenntnis der Klinikleitung zu effektiven Klimaschutzmaßnahmen. 
+Als Mitarbeitende, Auszubildende und Studierende der Uniklinik ??? ist uns das Thema **Klimaschutz** ein Herzensanliegen und wir fordern ein klares Bekenntnis der neuen Klinikleitung zu effektiven Klimaschutzmaßnahmen. 
+
+Sicherlich werden viele wichtige Themen und begründete Anliegen an die neu zusammengesetzte Klinikleitung herangetragen -- wir möchten uns dafür einsetzen, dass dabei auch das Thema Klimaschutz die Priorität bekommt, die es verdient!
 
 Auch wenn unsere Schritte im globalen Kontext klein erscheinen mögen, könnte das Uniklinikum als Vorreiter im Klimaschutz ein starkes Signal setzen.
 
