--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ Sicherlich werden viele wichtige Themen und begründete Anliegen an die neu zusa
 
 Auch wenn unsere Schritte im globalen Kontext klein erscheinen mögen, könnte das Uniklinikum als Vorreiter im Klimaschutz ein starkes Signal setzen.
 
-Wer mag, trete gern der Graswurzelgrün-[Signal](https://de.wikipedia.org/wiki/Signal_(Messenger))-Gruppe mit diesem [Link](https://signal.group/#CjQKIDh6EFRxpkJBwy1onl21FlMoOnqu74Owc2Tha9rb1oBsEhBo912oRq88p9McaeI1JC71) um auf dem Laufen zu bleiben und sich mit Gleichgesinnten zu vernetzen.
+Wer mag, trete gern mit diesem [Link](https://signal.group/#CjQKIDh6EFRxpkJBwy1onl21FlMoOnqu74Owc2Tha9rb1oBsEhBo912oRq88p9McaeI1JC71) der Graswurzelgrün-[Signal](https://de.wikipedia.org/wiki/Signal_(Messenger))-Gruppe um auf dem Laufen zu bleiben und sich mit Gleichgesinnten zu vernetzen!
 
 <!-- ### Warum jetzt? -->
 <!-- Klimaschutz darf nicht länger warten. Maßnahmen sollten zeitnah und mit hoher Priorität geplant und umgesetzt werden. Dabei geht es nicht nur um ökologisch sinnvolle Veränderungen, sondern auch um ökonomische Nachhaltigkeit. Jede bauliche oder organisatorische Entscheidung muss den Klimaschutz als zentralen Aspekt berücksichtigen. Wir fordern zudem die Bereitstellung finanzieller Mittel, um auch solche Maßnahmen zu ermöglichen, die kurzfristig wirtschaftlich nicht profitabel erscheinen. Klimaschutz ist eine Investition in die Zukunft – und er hat seinen Preis. Fördermittel sollten konsequent eingeworben werden, wo immer es möglich ist. -->
