--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Für Klimaschutz an der Uniklinik: Jetzt handeln!"
+title: "Für Klimaschutz an der Hochschulmedizin ???: Jetzt handeln!"
 ---
 
 <div class="banner"></div>
@@ -8,13 +8,13 @@ title: "Für Klimaschutz an der Uniklinik: Jetzt handeln!"
 
 Der Klimawandel ist längst Realität und erfordert *jetzt* entschlossenes Handeln. 
 
-In den kommenden Monaten stehen große personelle Veränderungen an der Spitze der Uniklinik an -- das ist eine große Chance!
+In den kommenden Monaten stehen große personelle Veränderungen an der Spitze der Hochschulmedizin an -- das ist eine große Chance!
 
-Als Mitarbeitende, Auszubildende und Studierende der Uniklinik ??? ist uns das Thema **Klimaschutz** ein Herzensanliegen und wir fordern ein klares Bekenntnis der neuen Klinikleitung zu effektiven Klimaschutzmaßnahmen. 
+Als Mitarbeitende, Auszubildende und Studierende der Hochschulmedizin ??? ist uns das Thema **Klimaschutz** ein Herzensanliegen und wir fordern ein klares Bekenntnis der neuen Klinikleitung zu effektiven Klimaschutzmaßnahmen. 
 
-Sicherlich werden viele wichtige Themen und begründete Anliegen an die neu zusammengesetzte Klinikleitung herangetragen -- wir möchten uns dafür einsetzen, dass dabei auch das Thema Klimaschutz die Priorität bekommt, die es verdient!
+Sicherlich werden viele wichtige Themen und begründete Anliegen an das neu zusammengesetzte Leitungsteam herangetragen -- wir möchten uns dafür einsetzen, dass dabei auch das Thema Klimaschutz die Priorität bekommt, die es verdient!
 
-Auch wenn unsere Schritte im globalen Kontext klein erscheinen mögen, könnte das Uniklinikum als Vorreiter im Klimaschutz ein starkes Signal setzen.
+Auch wenn unsere Schritte im globalen Kontext klein erscheinen mögen, könnte die Hochschulmedizin ?? als Vorreiter im Klimaschutz ein starkes Signal setzen.
 
 Wer mag, trete gern mit diesem [Link](https://signal.group/#CjQKIDh6EFRxpkJBwy1onl21FlMoOnqu74Owc2Tha9rb1oBsEhBo912oRq88p9McaeI1JC71) der Graswurzelgrün-[Signal](https://de.wikipedia.org/wiki/Signal_(Messenger))-Gruppe um auf dem Laufen zu bleiben und sich mit Gleichgesinnten zu vernetzen!
 
