--- a/index.qmd
+++ b/index.qmd
@@ -8,7 +8,7 @@ title: "Für Klimaschutz an der Hochschulmedizin Dresden: Jetzt handeln!"
 
 Der Klimawandel ist längst Realität und erfordert *jetzt* entschlossenes Handeln. 
 
-In den kommenden Monaten stehen große personelle Veränderungen an der Spitze der Hochschulmedizin an -- das ist eine große Chance!
+In den kommenden Monaten stehen große personelle Veränderungen an der Spitze der Hochschulmedizin Dresden an -- das ist eine große Chance!
 
 Als Mitarbeitende, Auszubildende und Studierende der Hochschulmedizin Dresden ist uns das Thema **Klimaschutz** ein Herzensanliegen und wir fordern ein klares Bekenntnis der neuen Klinikleitung zu effektiven Klimaschutzmaßnahmen. 
 
