--- a/index.qmd
+++ b/index.qmd
@@ -45,8 +45,8 @@ var OPWIDGET = {
 	"base_url": "https://www.openpetition.de",
 	"api_key": "503d7cf8e695626c0141b79fe478633307953f5275042f55d0095805a4fc5dce",
 	"options": {
-		"primarycolor": "#0000ff", // andere Farben: https://www.w3schools.com/colors/colors_picker.asp
-		"secondarycolor": "#0d6efd",
+		"primarycolor": "#0d6efd", // andere Farben: https://www.w3schools.com/colors/colors_picker.asp
+		"secondarycolor": "#3e3d40",
 		"backgroundcolor": "#ffffff",
 		"mainfontsize": "15px"
 	}
