--- a/index.qmd
+++ b/index.qmd
@@ -39,13 +39,13 @@ Wer mag, trete gern mit diesem [Link](https://signal.group/#CjQKIDh6EFRxpkJBwy1o
 <!-- ### Eine große Chance für die Zukunft -->
 <!-- Das Uniklinikum ??? hat die Möglichkeit, ein Vorbild im Klimaschutz zu werden – für andere Kliniken, Institutionen und die gesamte Gesellschaft. Lassen Sie uns diese Chance ergreifen und gemeinsam handeln! -->
 
-
+<!--0d6efd blau  -->
 <script>
 var OPWIDGET = {
 	"base_url": "https://www.openpetition.de",
 	"api_key": "503d7cf8e695626c0141b79fe478633307953f5275042f55d0095805a4fc5dce",
 	"options": {
-		"primarycolor": "#0d6efd", // andere Farben: https://www.w3schools.com/colors/colors_picker.asp
+		"primarycolor": "#3e3d40", // andere Farben: https://www.w3schools.com/colors/colors_picker.asp
 		"secondarycolor": "#3e3d40",
 		"backgroundcolor": "#ffffff",
 		"mainfontsize": "15px"
