--- a/index.qmd
+++ b/index.qmd
@@ -19,3 +19,20 @@ Auch wenn unsere Schritte im globalen Kontext klein erscheinen mögen, könnte d
 Wer mag, trete gern mit diesem [Link](https://signal.group/#CjQKIDh6EFRxpkJBwy1onl21FlMoOnqu74Owc2Tha9rb1oBsEhBo912oRq88p9McaeI1JC71) der Graswurzelgrün-[Signal](https://de.wikipedia.org/wiki/Signal_(Messenger))-Gruppe um auf dem Laufen zu bleiben und sich mit Gleichgesinnten zu vernetzen!
 
 Und am Wichtigsten: [Unterschreibe die Petition für mehr Klimaschutz an der Hochschulmedizin Dresden!](petition.qmd)
+
+
+<!--0d6efd blau  -->
+<script>
+var OPWIDGET = {
+	"base_url": "https://www.openpetition.de",
+	"api_key": "503d7cf8e695626c0141b79fe478633307953f5275042f55d0095805a4fc5dce",
+	"options": {
+		"primarycolor": "#3e3d40", // andere Farben: https://www.w3schools.com/colors/colors_picker.asp
+		"secondarycolor": "#3e3d40",
+		"backgroundcolor": "#90ee90",
+		"mainfontsize": "15px"
+	}
+};
+</script>
+<script src="https://www.openpetition.de/javascript/widget.js"></script>
+<noscript>Bitte aktivieren Sie JavaScript und laden die Seite neu.</noscript>
