--- a/index.qmd
+++ b/index.qmd
@@ -18,7 +18,7 @@ Auch wenn unsere Schritte im globalen Kontext klein erscheinen mögen, könnte d
 
 Wer mag, trete gern mit diesem [Link](https://signal.group/#CjQKIDh6EFRxpkJBwy1onl21FlMoOnqu74Owc2Tha9rb1oBsEhBo912oRq88p9McaeI1JC71) der Graswurzelgrün-[Signal](https://de.wikipedia.org/wiki/Signal_(Messenger))-Gruppe um auf dem Laufen zu bleiben und sich mit Gleichgesinnten zu vernetzen!
 
-Und am Wichtigsten: [Unterschreibe die Petition für mehr Klimaschutz an der Hochschulmedizin Dresden!](petition.qmd)
+<!-- Und am Wichtigsten: [Unterschreibe die Petition für mehr Klimaschutz an der Hochschulmedizin Dresden!](petition.qmd) -->
 
 
 <!--0d6efd blau  -->
