--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ Sicherlich werden viele wichtige Themen und begründete Anliegen an das neu zusa
 
 Auch wenn unsere Schritte im globalen Kontext klein erscheinen mögen, könnte die Hochschulmedizin Dresden als Vorreiter im Klimaschutz ein starkes Signal setzen.
 
-Wer mag, trete gern mit diesem [Link](https://signal.group/#CjQKIDh6EFRxpkJBwy1onl21FlMoOnqu74Owc2Tha9rb1oBsEhBo912oRq88p9McaeI1JC71) der Graswurzelgrün-[Signal](https://de.wikipedia.org/wiki/Signal_(Messenger))-Gruppe um auf dem Laufen zu bleiben und sich mit Gleichgesinnten zu vernetzen!
+Wer mag, trete gern mit diesem [Link](https://signal.group/#CjQKIDh6EFRxpkJBwy1onl21FlMoOnqu74Owc2Tha9rb1oBsEhBo912oRq88p9McaeI1JC71) der Graswurzelgrün-[Signal](https://de.wikipedia.org/wiki/Signal_(Messenger))-Gruppe bei um auf dem Laufen zu bleiben und sich mit Gleichgesinnten zu vernetzen!
 
 **Und am wichtigsten: Zeichnung der Petition für mehr Klimaschutz an der Hochschulmedizin Dresden, realisiert über die Plattform [openPetition](https://www.openpetition.de/):**
 
