--- a/index.qmd
+++ b/index.qmd
@@ -8,3 +8,4 @@ title: "GrasWurzelGrün ist schön"
 
 Der Klimawandel ist längst Realität und erfordert *jetzt* entschlossenes Handeln. 
 
+Schau doch mal bei [GrasWurzelGesund](https://graswurzelgesund.de) vorbei!
